--- a/src/components/ProductForm/ProductForm.css
+++ b/src/components/ProductForm/ProductForm.css
@@ -13,11 +13,10 @@
     margin-top: 15px;
 }
 
-.color {
-    width: 20px;
-    height: 20px;
-    margin-left: auto;
-    border: 1px solid #F5F5F5;
+.color-option {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
 }
 
 .form-container label[class*="MuiFormControlLabel-root"] {
